fix(styles): score card gap

--- a/packages/styles/scss/components/_scorecard.scss
+++ b/packages/styles/scss/components/_scorecard.scss
@@ -26,7 +26,6 @@
         flex: 1 1 auto;
         flex-direction: column;
         padding: spacing(6) spacing(6) spacing(8) spacing(6);
-        gap: spacing(6);
         width: 100%;
       }
 
@@ -46,14 +45,19 @@
         }
       }
 
+      .ilo--status {
+        margin-bottom: spacing(6);
+      }
+
+      #{$self}--eyebrow {
+        margin-bottom: spacing(4);
+      }
+
       #{$self}--title {
         @include font-styles("headline-5");
         font-family: var(--ilo-fonts-display);
         font-weight: 700;
-      }
-
-      #{$self}--eyebrow {
-        margin: 0;
+        margin-bottom: spacing(6);
       }
 
       #{$self}--area {
@@ -61,6 +65,7 @@
           display: flex;
           flex-flow: column;
           gap: spacing(2);
+          margin-bottom: spacing(6);
         }
 
         &--cta {
